# harshitha_assignments

./: hello.c
week-1/: Combinational Circuits.pptx  Micro controller-8051.pptx  Microprocessor-8085.pptx  SOC_Design_and_Verification.pptx  Sequential Circuits.pptx  VLSI_Design_Flow.pptx
week2-3/: CMakeLists.txt  Program10.cpp  Program12.cpp  Program13.cpp  Program14.cpp  Program15.cpp  Program16.cpp  Program17.cpp  Program2.cpp  Program22.cpp  Program23.cpp  Program24.cpp  Program25.cpp  Program26.cpp  Program27.cpp  Program28.cpp  Program29.cpp  Program3-1.cpp  Program3-2.cpp  Program3-3.cpp  Program30.cpp  Program31.cpp  Program32.cpp  Program33.cpp  Program34.cpp  Program35.cpp  Program36.cpp  Program37.cpp  Program38.cpp  Program39.cpp  Program4-1.cpp  Program4-2.cpp  Program40.cpp  Program41.cpp  Program42.cpp  Program43.cpp  Program44.cpp  Program45.cpp  Program46.cpp  Program47.cpp  (+27 more)
