cmake_minimum_required(VERSION 3.10)

set(ASSIGNMENT2_SOURCE Program2.cpp)
add_executable(assign2 ${ASSIGNMENT2_SOURCE})

set(ASSIGNMENT3-1_SOURCE Program3-1.cpp)
add_executable(assign3-1 ${ASSIGNMENT3-1_SOURCE})

set(ASSIGNMENT3-2_SOURCE Program3-2.cpp)
add_executable(assign3-2 ${ASSIGNMENT3-2_SOURCE})

set(ASSIGNMENT3-3_SOURCE Program3-3.cpp)
add_executable(assign3-3 ${ASSIGNMENT3-3_SOURCE})

set(ASSIGNMENT4-1_SOURCE Program4-1.cpp)
add_executable(assign4-1 ${ASSIGNMENT4-1_SOURCE})

set(ASSIGNMENT4-2_SOURCE Program4-2.cpp)
add_executable(assign4-2 ${ASSIGNMENT4-2_SOURCE})

set(ASSIGNMENT5_SOURCE Program5.cpp)
add_executable(assign5 ${ASSIGNMENT5_SOURCE})

set(ASSIGNMENT6_SOURCE Program6.cpp)
add_executable(assign6 ${ASSIGNMENT6_SOURCE})

set(ASSIGNMENT7_SOURCE Program7.cpp)
add_executable(assign7 ${ASSIGNMENT7_SOURCE})

set(ASSIGNMENT8_SOURCE Program8.cpp)
add_executable(assign8 ${ASSIGNMENT8_SOURCE})

set(ASSIGNMENT9_SOURCE Program9.cpp)
add_executable(assign9 ${ASSIGNMENT9_SOURCE})

set(ASSIGNMENT10_SOURCE Program10.cpp)
add_executable(assign10 ${ASSIGNMENT10_SOURCE})

set(ASSIGNMENT12_SOURCE Program12.cpp)
add_executable(assign12 ${ASSIGNMENT12_SOURCE})

set(ASSIGNMENT13_SOURCE Program13.cpp)
add_executable(assign13 ${ASSIGNMENT13_SOURCE})

set(ASSIGNMENT14_SOURCE Program14.cpp)
add_executable(assign14 ${ASSIGNMENT14_SOURCE})

set(ASSIGNMENT15_SOURCE Program15.cpp)
add_executable(assign15 ${ASSIGNMENT15_SOURCE})

set(ASSIGNMENT22_SOURCE Program22.cpp)
add_executable(assign22 ${ASSIGNMENT22_SOURCE})

set(ASSIGNMENT23_SOURCE Program23.cpp)
add_executable(assign23 ${ASSIGNMENT23_SOURCE})

set(ASSIGNMENT24_SOURCE Program24.cpp)
add_executable(assign24 ${ASSIGNMENT24_SOURCE})

set(ASSIGNMENT25_SOURCE Program25.cpp)
add_executable(assign25 ${ASSIGNMENT25_SOURCE})

set(ASSIGNMENT26_SOURCE Program26.cpp)
add_executable(assign26 ${ASSIGNMENT26_SOURCE})

set(ASSIGNMENT27_SOURCE Program27.cpp)
add_executable(assign27 ${ASSIGNMENT27_SOURCE})

set(ASSIGNMENT28_SOURCE Program28.cpp)
add_executable(assign28 ${ASSIGNMENT28_SOURCE})

set(ASSIGNMENT29_SOURCE Program29.cpp)
add_executable(assign29 ${ASSIGNMENT29_SOURCE})

set(ASSIGNMENT30_SOURCE Program30.cpp)
add_executable(assign30 ${ASSIGNMENT30_SOURCE})

set(ASSIGNMENT31_SOURCE Program31.cpp)
add_executable(assign31 ${ASSIGNMENT31_SOURCE})

set(ASSIGNMENT32_SOURCE Program32.cpp)
add_executable(assign32 ${ASSIGNMENT32_SOURCE})

set(ASSIGNMENT33_SOURCE Program33.cpp)
add_executable(assign33 ${ASSIGNMENT33_SOURCE})

set(ASSIGNMENT34_SOURCE Program34.cpp)
add_executable(assign34 ${ASSIGNMENT34_SOURCE})

set(ASSIGNMENT35_SOURCE Program35.cpp)
add_executable(assign35 ${ASSIGNMENT35_SOURCE})

set(ASSIGNMENT36_SOURCE Program36.cpp)
add_executable(assign36 ${ASSIGNMENT36_SOURCE})

set(ASSIGNMENT37_SOURCE Program37.cpp)
add_executable(assign37 ${ASSIGNMENT37_SOURCE})

set(ASSIGNMENT38_SOURCE Program38.cpp)
add_executable(assign38 ${ASSIGNMENT38_SOURCE})

set(ASSIGNMENT39_SOURCE Program39.cpp)
add_executable(assign39 ${ASSIGNMENT39_SOURCE})

set(ASSIGNMENT40_SOURCE Program40.cpp)
add_executable(assign40 ${ASSIGNMENT40_SOURCE})

set(ASSIGNMENT41_SOURCE Program41.cpp)
add_executable(assign41 ${ASSIGNMENT41_SOURCE})

set(ASSIGNMENT42_SOURCE Program42.cpp)
add_executable(assign42 ${ASSIGNMENT42_SOURCE})

set(ASSIGNMENT43_SOURCE Program43.cpp)
add_executable(assign43 ${ASSIGNMENT43_SOURCE})

set(ASSIGNMENT44_SOURCE Program44.cpp)
add_executable(assign44 ${ASSIGNMENT44_SOURCE})

set(ASSIGNMENT45_SOURCE Program45.cpp)
add_executable(assign45 ${ASSIGNMENT45_SOURCE})

set(ASSIGNMENT46_SOURCE Program46.cpp)
add_executable(assign46 ${ASSIGNMENT46_SOURCE})

set(ASSIGNMENT47_SOURCE Program47.cpp)
add_executable(assign47 ${ASSIGNMENT47_SOURCE})

set(ASSIGNMENT48_SOURCE Program48.cpp)
add_executable(assign48 ${ASSIGNMENT48_SOURCE})

set(ASSIGNMENT49_SOURCE Program49.cpp)
add_executable(assign49 ${ASSIGNMENT49_SOURCE})

